* Experimental support for VDIF data served over Shared Memory
* For Mark5B and VDIF file-based correlation put file information into log stream
* Adopted startdifx, genmachines.py, joblist, jobstatus, and jobdisks scripts from calcif2 as new competing delay model, difxcalc11, is coming in...
* Improve accuracy of estimated memory usage (estimatedbytes) in VDIF datastreams

Version 2.4
~~~~~~~~~~~
* Add INTERLACEDVDIF Fake mode
* Change polId to recBandId in the PCAL files as per documentation
* Add support for TCP, UDP and Raw Ethernet Interlaced VDIF.  (TCP and UDP Not yet tested)
* Test Mark5 XLRReadData() calls by tainting the end of the destination buffer and verifying it gets untainted.
* Add more generalized support for the zoo of Mark5 module directory formats
* When reading data from Mark5 units, verify that the data is in the same format class as requested by the .input file.
* Improve Mark5B decoding
* Fix Bonn Bug 1: on 64-bit systems sizeof(unsigned long) is 8 bytes, not 4 as it is on 32-bit systems.
  - some other variable types changed as well to minimize casting and prevent future similar problems.
* Fix Bonn Bug 2: Lower sideband interacted badly with zoom bands
* Emit Mark5 version information via cinfo on startup
* PCAL: Pcal files generated are now consistent with http://cira.ivec.org/dokuwiki/lib/exe/fetch.php/difx/difxuserguide.pdf
* PCAL: Write informational header in comments to top of PCAL files
* Reduce sort window for VDIF to 32 frames to accomodate lower bandwidths.
  - Someday this should be tuned a bit better.
* Adapt new call API of vdifio
* VDIF: respect frame granularity when unpacking
  - Frame durations not integer nanoseconds in length were affected by a roundoff error.
* Tagged for DiFX-2.4, 4 November 2014

Version 2.3
~~~~~~~~~~~
* LO offset correction is now always done with fringe rotation (so in the 
  time domain if fringe rotation is in the time domain).  Allows larger